--- a/source/_templates/footer.html
+++ b/source/_templates/footer.html
@@ -31,7 +31,7 @@
       -->
 
       {%- if show_copyright %}
-      <i class="fa fa-copyright fa-flip-horizontal"></i> 本作品采用 <a rel="license"
+      <i class="fa fa-copyright fa-flip-horizontal"></i> 本作品所有文字采用 <a rel="license"
         href="http://creativecommons.org/licenses/by/4.0/">CC BY-SA 4.0</a> 协议进行许可。
       {%- endif %}
 
