--- a/source/_templates/breadcrumbs.html
+++ b/source/_templates/breadcrumbs.html
@@ -38,17 +38,9 @@
       <li class="wy-breadcrumbs-aside">
         {% if hasdoc(pagename) %}
             
-            {%- if build_id and build_url %}
-            <span class="build">
-              构建 <a href="{{ build_url }}">{{ build_id }}</a>
-            </span>
-            {%- elif commit %}
-            <span class="commit">
+            {%- if commit %}
+            <span class="commit" style="color:grey">
               版本 <code>{{ commit }}</code>
-            </span>
-            {%- elif last_updated %}
-            <span class="lastupdated">
-              上次更新于 {{ last_updated }}
             </span>
             {%- endif %}
 
